adding equals/hashcode implementation to SavedAO, as well as javadocs
SavedAO and subclasses used default equals and HC, but should have been using actual class-specific implementation. Also added and improved javadocs throughout the text module